fix index scrollbar

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -405,6 +405,15 @@ $primary-color: #051468;
             top: calc(5% + 70px);
         }
     }
+    #section1 {
+        height: auto !important;
+        .fp-tableCell {
+            height: auto !important;
+            .fp-scrollable {
+                height: auto !important;
+            }
+        }
+    }
     .section1-bg {
         background: url(../images/index/section1-bg-m.jpg) center no-repeat;
         background-size: cover;
